# ROS2

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build_test.yml
install/: local_setup.sh  setup.sh
install/hello_pkg/lib/hello_pkg/: hello
install/hello_pkg/share/hello_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hello_pkg/share/hello_pkg/cmake/: hello_pkgConfig.cmake
log/: latest_build
src/hello_pkg/src/: hello.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/hello_pkg/share/hello_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/install/mypkg/share/mypkg/: package.sh  package.xml  talk_listen.launch.py
src/log/: latest_build
src/person_msgs/: package.xml
