<?xml version="1.0"?>
<package format="2">
  <name>hello_pkg</name>
  <version>0.0.0</version>
  <description>Time publisher example</description>

  <maintainer email="n.yuma0623@gmail.com">YuMaNaI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
